<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/BackgroundStyle.ActivityStyle"
        >
    <RelativeLayout
            android:id="@+id/nameRegLayoutId"
            style="@style/BackgroundStyle"
            android:layout_weight="2"
            >
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/sigInRegLayoutId"
            android:orientation="vertical"
            style="@style/BackgroundStyle"
            android:layout_weight="1"
            >

        <EditText
                android:id="@+id/nicknameRegId"
                style="@style/EditTextStyle"
                android:hint="@string/nick_name"
                />
        <EditText
                android:id="@+id/passwordRegId"
                style="@style/EditTextStyle"
                android:hint="@string/password"
                />
        <EditText
                android:id="@+id/confirmPassworRegdId"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password"
                />
        <LinearLayout
                android:id="@+id/buttonsRegLayoutId"
                android:orientation="horizontal"
                style="@style/BackgroundStyle.LayoutButtonStyle"
                >

            <Button
                    android:id="@+id/registerRegId"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/register_button"
                    />
            <Button
                    android:id="@+id/cancelRegId"
                    style="@style/ButtonStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"
                    />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>