<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/BackgroundStyle.ActivityStyle"
        >
    <RelativeLayout
            android:id="@+id/nameProfLayoutId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/sigInProfLayoutId"
            android:orientation="vertical"
            style="@style/BackgroundStyle"
            android:layout_weight="1"
            >

        <EditText
                android:id="@+id/nicknameProfId"
                style="@style/EditTextStyle"
                android:hint="@string/nick_name"
                />
        <EditText
                android:id="@+id/passwordProfId"
                style="@style/EditTextStyle"
                android:hint="@string/password"
                />
        <EditText
                android:id="@+id/confirmPassworProfdId"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password"
                />
        <LinearLayout
                android:id="@+id/buttonsProfLayoutId"
                android:orientation="horizontal"
                style="@style/BackgroundStyle.LayoutButtonStyle"
                >


            <Button
                    android:id="@+id/saveProfId"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/save_button"
                    />
            <Button
                    android:id="@+id/cancelProfId"
                    style="@style/ButtonStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"
                    />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>