<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/BackgroundStyle.ActivityStyle"
        >
    <RelativeLayout
            android:id="@+id/nameAppLayoutId"
            style="@style/BackgroundStyle"
            android:layout_weight="1.5"
            >

        <TextView
                android:id="@+id/textAppId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/app_name_size"
                android:textColor="@color/app_name"
                android:text="@string/app_name"

                />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/sigInLayoutId"
            android:orientation="vertical"
            style="@style/BackgroundStyle"
            android:layout_marginTop="@dimen/margin_top_login"
            android:layout_weight="1"
            >

        <EditText
                android:id="@+id/nicknameId"
                style="@style/EditTextStyle"
                android:hint="@string/nick_name"
                />
        <EditText
                android:id="@+id/passwordId"
                style="@style/EditTextStyle"
                android:hint="@string/password"
                />
        <LinearLayout
                android:id="@+id/buttonsLayoutId"
                android:orientation="horizontal"
                style="@style/BackgroundStyle.LayoutButtonStyle"
                >

            <Button
                    android:id="@+id/loginIdButton"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/login_button"
                    />
            <Button
                    android:id="@+id/registerIdButton"
                    style="@style/ButtonStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:text="@string/register_button"
                    />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

